adding log in
